Fixed couple very minor layout bugs

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -520,7 +520,7 @@ div.right_side{
 }
 
 div.right_side p{
-	padding: 5px 0;
+	padding: 5px 5px;
 	margin: 0px;
 }
 
